# sqlit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  testdb.ipynb
