[tool.poetry]
name = "sqlit"
version = "0.1.0"
description = ""
authors = ["Jeff Liu <Jeff.Liu@nz.ey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jfutils = {path = "C:/temp/jfutils-0.4.3-py3-none-any.whl"}
streamlit = "^1.44.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
